Fix table valign

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -123,6 +123,10 @@ article {
           text-indent: 2em;
         }
 
+        td {
+ 	  vertical-align:top;
+	}
+
 	a, a:visited {
 		color: #1863A1;
 	}
